<resources>
    <string name="app_name">Users</string>
    <string name="last_name">Last Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="first_name">First Name</string>
    <string name="select_date">SELECT DATE</string>
    <string name="gender">Gender</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="home_town">Home Town</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
</resources>