<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_ht"
                android:background="@drawable/gradient_back"
                android:orientation="vertical" />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/profile_picture_edit_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_picture"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="@drawable/account_circle_black_24dp"/>
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fab"
                    app:layout_constraintBottom_toBottomOf="@+id/profile_picture"
                    app:layout_constraintRight_toRightOf="@+id/profile_picture"
                    android:src="@drawable/ic_mode_edit_black_24dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/profile_picture_edit_layout"
                android:layout_marginTop="@dimen/margin_50dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/margin_16dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/first_name"
                        android:textColor="@color/colorPrimary"
                        />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edittext_box"
                            android:padding="@dimen/padding_8dp"
                            android:id="@+id/first_name_edit"
                            android:inputType="textCapWords"/>


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/margin_16dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/last_name"
                        android:textColor="@color/colorPrimary"
                        />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edittext_box"
                            android:padding="@dimen/padding_8dp"
                            android:id="@+id/last_name_edit"
                            android:inputType="textCapWords"/>


                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/margin_16dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_of_birth"
                        android:textColor="@color/colorPrimary"/>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <TextView
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/in_date"

                            android:padding="@dimen/padding_8dp"
                            android:background="@drawable/edittext_box"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/select_date"
                            android:id="@+id/btn_date"
                            android:layout_marginStart="@dimen/margin_8dp"
                            android:layout_marginTop="@dimen/margin_8dp"
                            android:layout_alignBottom="@+id/in_date"
                            android:layout_toRightOf="@+id/in_date"
                            android:layout_toEndOf="@+id/in_date" />

                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/margin_16dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"
                        android:textColor="@color/colorPrimary"/>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_box">
                        <androidx.appcompat.widget.AppCompatSpinner
                            android:id="@+id/spinner_gender"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/size_26sp"
                            android:padding="4dp" />

                    </com.google.android.material.textfield.TextInputLayout>



                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/margin_16dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/country"
                        android:textColor="@color/colorPrimary"/>

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edittext_box"
                            android:padding="@dimen/padding_8dp"
                            android:id="@+id/country_edit"
                            android:inputType="textCapCharacters"/>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/margin_16dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/state"
                        android:textColor="@color/colorPrimary"/>

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding_8dp"
                            android:background="@drawable/edittext_box"
                            android:id="@+id/state_edit"
                            android:inputType="textCapWords"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/margin_16dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/home_town"
                        android:textColor="@color/colorPrimary"/>

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edittext_box"
                            android:padding="@dimen/padding_8dp"
                            android:id="@+id/home_town_edit"
                            android:inputType="textCapWords"/>


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/margin_16dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_number"
                        android:textColor="@color/colorPrimary"/>

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edittext_box"
                            android:padding="@dimen/padding_8dp"
                            android:id="@+id/phone_edit"
                            android:inputType="number"/>


                </LinearLayout>






                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/register_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/margin_32dp"
                    android:padding="@dimen/margin_16dp"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:text="@string/register"
                    android:textSize="@dimen/size_16sp"/>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>